unpackaged/main/default/objects/tspa__VisualJourneyUsers__c/tspa__VisualJourneyUsers__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Visual Journey Users</label>
</CustomObject>