unpackaged/main/default/objects/tspa__VisualJourneyUsers__c/fields/tspa__Nortification__c.field-meta.xml
<CustomField>
    <fullName>tspa__Nortification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Nortification</label>
    <type>Checkbox</type>
</CustomField>