unpackaged/main/default/objects/tspa__VisualJourneyUsers__c/fields/tspa__UserId__c.field-meta.xml
<CustomField>
    <fullName>tspa__UserId__c</fullName>
    <label>UserId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>