unpackaged/main/default/objects/tspa__VisualJourneyUsers__c/fields/tspa__UserName__c.field-meta.xml
<CustomField>
    <fullName>tspa__UserName__c</fullName>
    <label>UserName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>